--- a/.github/workflows/mram.yml
+++ b/.github/workflows/mram.yml
@@ -12,39 +12,36 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Collect Elite Servers Only
+      - name: Collect Elite Servers
         run: |
-          # 1. التوقيت والترويسة
           TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
           echo "###############################################" > mysubs_new.txt
           echo "# BRAND: Ghazwan_pro - ELITE VERSION" >> mysubs_new.txt
-          echo "# FOCUS: Iran High-Speed + Multiply Dose" >> mysubs_new.txt
           echo "# UPDATE: $TIMESTAMP" >> mysubs_new.txt
           echo "###############################################" >> mysubs_new.txt
           
-          # 2. جلب السيرفرات من المصادر "القوية جداً" التي جربتها
           touch raw.txt
-          # مصدر سيرفرات إيران القوية
+          # المصادر التي أثبتت جدارتها عندك
           curl -sL "https://raw.githubusercontent.com/yebekhe/TVip/main/Sub/v2ray.txt" >> raw.txt
-          # مصدر سيرفرات Multiply و Fr33C0nfig
           curl -sL "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt" >> raw.txt
-          curl -sL "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt" >> raw.txt
+          curl -sL "https://raw.githubusercontent.com/miladtahanian/Config-Collector/main/mixed_iran.txt" >> raw.txt
           
-          # 3. الفلترة المتقدمة:
-          # - حذف chillguy لتقليل الـ ms
-          # - إبقاء السيرفرات التي تدعم TLS (لأنها الأقوى)
-          grep -Ei "vmess|vless|trojan" raw.txt | grep -iv "chillguy" | grep -i "tls" | sort -u > clean.txt
+          # الفلترة الذكية:
+          # 1. إبقاء البروتوكولات القوية فقط
+          # 2. حذف سيرفرات chillguy الضعيفة
+          # 3. حذف المتكرر لتقليل حجم الملف
+          grep -Ei "vmess|vless|trojan" raw.txt | grep -iv "chillguy" | sort -u > clean.txt
 
-          # 4. التوزيع على هوستاتك المعتمدة (تخطي الحجب)
-          # توزيع السيرفرات المختارة فقط
-          sed -n '1,100p' clean.txt | sed -E 's/@[^:]+:/@viberout-lp.viber.com:/g' >> mysubs_new.txt
-          sed -n '101,200p' clean.txt | sed -E 's/@[^:]+:/@lp.viber.com:/g' >> mysubs_new.txt
-          sed -n '201,300p' clean.txt | sed -E 's/@[^:]+:/@braze-images.com:/g' >> mysubs_new.txt
-          sed -n '301,400p' clean.txt | sed -E 's/@[^:]+:/@cdn.braze.com:/g' >> mysubs_new.txt
+          # حقن الهوستات لضمان التخطي (توزيع 150 سيرفر لكل هوست)
+          sed -n '1,150p' clean.txt | sed -E 's/@[^:]+:/@viberout-lp.viber.com:/g' >> mysubs_new.txt
+          sed -n '151,300p' clean.txt | sed -E 's/@[^:]+:/@lp.viber.com:/g' >> mysubs_new.txt
+          sed -n '301,450p' clean.txt | sed -E 's/@[^:]+:/@braze-images.com:/g' >> mysubs_new.txt
+          sed -n '451,600p' clean.txt | sed -E 's/@[^:]+:/@cdn.braze.com:/g' >> mysubs_new.txt
 
       - name: Push to Master
         run: |
           git config --global user.name "Ghazwan-Pro-Lab"
           git config --global user.email "lab@ghazwan.pro"
           git add mysubs_new.txt
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Elite Servers Update $TIMESTAMP" && git push)
+          git commit -m "Elite Update $TIMESTAMP" || exit 0
+          git push
