--- a/.github/workflows/mram.yml
+++ b/.github/workflows/mram.yml
@@ -1,4 +1,4 @@
-name: Ghazwan_Iraq_Elite_Final
+name: Ghazwan_Pro_Titanium
 
 on:
   schedule:
@@ -12,42 +12,27 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Collect Elite Servers (Strict Port 443)
+      - name: Collect Titanium Elite Servers
         run: |
-          # 1. التوقيت والترويسة
+          # 1. إعداد الترويسة بالاسم الجديد
           TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
           echo "###############################################" > mysubs_new.txt
-          echo "# BRAND: Ghazwan_pro - ELITE FIXED" >> mysubs_new.txt
-          echo "# STATUS: PORT 443 ONLY - TLS/WS SUPPORT" >> mysubs_new.txt
+          echo "# BRAND: Ghazwan_Pro_Titanium" >> mysubs_new.txt
+          echo "# STATUS: ELITE TLS - PORT 443 ONLY" >> mysubs_new.txt
           echo "# UPDATE: $TIMESTAMP" >> mysubs_new.txt
           echo "###############################################" >> mysubs_new.txt
           
           touch raw.txt
-          # المصادر التي تجلب سيرفرات مشابهة لـ CreationLong والنخبة
+          # المصادر القوية التابعة لـ Fr33C0nfig و YamYam
           urls=(
-            "https://raw.githubusercontent.com/yebekhe/TVip/main/Sub/v2ray.txt"
+            "https://raw.githubusercontent.com/yebekhe/TelegramV2rayCollector/main/sub/normal/mix"
             "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt"
             "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt"
-            "https://raw.githubusercontent.com/miladtahanian/Config-Collector/main/mixed_iran.txt"
           )
 
           for url in "${urls[@]}"; do
             curl -sL "$url" >> raw.txt
           done
           
-          # 2. الفلترة الصارمة: بورت 443 حصراً لضمان العمل في العراق وحذف الضعيف
-          grep -iE ":443" raw.txt | grep -Ei "vmess|vless|trojan" | grep -iv "chillguy" | grep -i "tls" | sort -u > clean.txt
-
-          # 3. حقن الهوستات (استبدال العنوان مع الحفاظ على البورت 443 الأصلي بشكل سليم)
-          sed -n '1,150p' clean.txt | sed -E 's/@[^:]+:/@viberout-lp.viber.com:/g' >> mysubs_new.txt
-          sed -n '151,300p' clean.txt | sed -E 's/@[^:]+:/@lp.viber.com:/g' >> mysubs_new.txt
-          sed -n '301,450p' clean.txt | sed -E 's/@[^:]+:/@braze-images.com:/g' >> mysubs_new.txt
-          sed -n '451,600p' clean.txt | sed -E 's/@[^:]+:/@cdn.braze.com:/g' >> mysubs_new.txt
-
-      - name: Push to Master
-        run: |
-          git config --global user.name "Ghazwan-Pro-Lab"
-          git config --global user.email "lab@ghazwan.pro"
-          git add mysubs_new.txt
-          git commit -m "Elite Iraq Fix $TIMESTAMP" || exit 0
-          git push
+          # 2. الفلترة الصارمة (بورت 443 + TLS) لضمان أعلى استقرار بالعراق
+          grep -iE ":443" raw.txt | grep -Ei "
