--- a/.github/workflows/mram.yml
+++ b/.github/workflows/mram.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Collect Titanium Elite Servers
         run: |
-          # 1. إعداد الترويسة بالاسم الجديد
+          # 1. إعداد الترويسة
           TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
           echo "###############################################" > mysubs_new.txt
           echo "# BRAND: Ghazwan_Pro_Titanium" >> mysubs_new.txt
@@ -22,17 +22,29 @@ jobs:
           echo "# UPDATE: $TIMESTAMP" >> mysubs_new.txt
           echo "###############################################" >> mysubs_new.txt
           
+          # 2. جلب السيرفرات من المصادر الموثوقة (بما فيها Fr33C0nfig)
           touch raw.txt
-          # المصادر القوية التابعة لـ Fr33C0nfig و YamYam
-          urls=(
-            "https://raw.githubusercontent.com/yebekhe/TelegramV2rayCollector/main/sub/normal/mix"
-            "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt"
-            "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt"
-          )
-
-          for url in "${urls[@]}"; do
-            curl -sL "$url" >> raw.txt
-          done
+          curl -sL "https://raw.githubusercontent.com/yebekhe/TelegramV2rayCollector/main/sub/normal/mix" >> raw.txt
+          curl -sL "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt" >> raw.txt
+          curl -sL "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt" >> raw.txt
           
-          # 2. الفلترة الصارمة (بورت 443 + TLS) لضمان أعلى استقرار بالعراق
-          grep -iE ":443" raw.txt | grep -Ei "
+          # 3. الفلترة الصارمة (بورت 443 و TLS) لتجنب الفشل
+          grep -iE ":443" raw.txt | grep -Ei "vmess|vless|trojan" | grep -i "tls" | sort -u > clean.txt
+
+          # 4. حقن الهوستات (استبدال آمن للعنوان)
+          if [ -s clean.txt ]; then
+            sed -n '1,150p' clean.txt | sed -E 's/@[^:]+:/@viberout-lp.viber.com:/g' >> mysubs_new.txt
+            sed -n '151,300p' clean.txt | sed -E 's/@[^:]+:/@lp.viber.com:/g' >> mysubs_new.txt
+            sed -n '301,450p' clean.txt | sed -E 's/@[^:]+:/@braze-images.com:/g' >> mysubs_new.txt
+            sed -n '451,600p' clean.txt | sed -E 's/@[^:]+:/@cdn.braze.com:/g' >> mysubs_new.txt
+          else
+            echo "No servers found matching criteria" >> mysubs_new.txt
+          fi
+
+      - name: Push to Master
+        run: |
+          git config --global user.name "Ghazwan-Pro-Lab"
+          git config --global user.email "lab@ghazwan.pro"
+          git add mysubs_new.txt
+          git commit -m "Titanium Elite Update $TIMESTAMP" || echo "No changes to commit"
+          git push || echo "Push failed, but action continues"
