--- a/.github/workflows/mram.yml
+++ b/.github/workflows/mram.yml
@@ -18,27 +18,29 @@ jobs:
           TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
           echo "###############################################" > mysubs_new.txt
           echo "# BRAND: Ghazwan_Pro_Titanium" >> mysubs_new.txt
-          echo "# STATUS: ELITE TLS - PORT 443 ONLY" >> mysubs_new.txt
+          echo "# STATUS: IRAQ OPTIMIZED - PORT 443" >> mysubs_new.txt
           echo "# UPDATE: $TIMESTAMP" >> mysubs_new.txt
           echo "###############################################" >> mysubs_new.txt
           
-          # 2. جلب السيرفرات من المصادر الموثوقة (بما فيها Fr33C0nfig)
+          # 2. جلب السيرفرات من أقوى 5 مصادر عالمية (توسيع المصادر)
           touch raw.txt
           curl -sL "https://raw.githubusercontent.com/yebekhe/TelegramV2rayCollector/main/sub/normal/mix" >> raw.txt
           curl -sL "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt" >> raw.txt
           curl -sL "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt" >> raw.txt
+          curl -sL "https://raw.githubusercontent.com/barry-far/V2ray-Config/main/All_Configs_Sub.txt" >> raw.txt
+          curl -sL "https://raw.githubusercontent.com/Sumbul-V2ray/v2ray-collector/main/v2ray-configs.txt" >> raw.txt
           
-          # 3. الفلترة الصارمة (بورت 443 و TLS) لتجنب الفشل
-          grep -iE ":443" raw.txt | grep -Ei "vmess|vless|trojan" | grep -i "tls" | sort -u > clean.txt
+          # 3. الفلترة الذكية: بورت 443 فقط (بدون شروط إضافية لضمان الامتلاء)
+          grep -iE ":443" raw.txt | grep -Ei "vmess|vless|trojan" | grep -iv "chillguy" | sort -u > clean.txt
 
-          # 4. حقن الهوستات (استبدال آمن للعنوان)
+          # 4. حقن الهوستات (استبدال العنوان)
           if [ -s clean.txt ]; then
-            sed -n '1,150p' clean.txt | sed -E 's/@[^:]+:/@viberout-lp.viber.com:/g' >> mysubs_new.txt
-            sed -n '151,300p' clean.txt | sed -E 's/@[^:]+:/@lp.viber.com:/g' >> mysubs_new.txt
-            sed -n '301,450p' clean.txt | sed -E 's/@[^:]+:/@braze-images.com:/g' >> mysubs_new.txt
-            sed -n '451,600p' clean.txt | sed -E 's/@[^:]+:/@cdn.braze.com:/g' >> mysubs_new.txt
+            sed -n '1,200p' clean.txt | sed -E 's/@[^:]+:/@viberout-lp.viber.com:/g' >> mysubs_new.txt
+            sed -n '201,400p' clean.txt | sed -E 's/@[^:]+:/@lp.viber.com:/g' >> mysubs_new.txt
+            sed -n '401,600p' clean.txt | sed -E 's/@[^:]+:/@braze-images.com:/g' >> mysubs_new.txt
+            sed -n '601,800p' clean.txt | sed -E 's/@[^:]+:/@cdn.braze.com:/g' >> mysubs_new.txt
           else
-            echo "No servers found matching criteria" >> mysubs_new.txt
+            echo "Searching for more servers..." >> mysubs_new.txt
           fi
 
       - name: Push to Master
@@ -46,5 +48,5 @@ jobs:
           git config --global user.name "Ghazwan-Pro-Lab"
           git config --global user.email "lab@ghazwan.pro"
           git add mysubs_new.txt
-          git commit -m "Titanium Elite Update $TIMESTAMP" || echo "No changes to commit"
-          git push || echo "Push failed, but action continues"
+          git commit -m "Titanium Full Refresh $TIMESTAMP" || echo "No changes"
+          git push || echo "Push failed"
