--- a/.github/workflows/king_of_hearts.yml
+++ b/.github/workflows/king_of_hearts.yml
@@ -1,8 +1,8 @@
-name: King_of_Hearts_Special
+name: King_of_Hearts_Full_Scan
 
 on:
   schedule:
-    - cron: '0 */4 * * *' # تشغيل تلقائي كل 4 ساعات
+    - cron: '0 */4 * * *' # تحديث كل 4 ساعات
   workflow_dispatch: 
 
 jobs:
@@ -12,23 +12,21 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Fetch and Filter (Port 443/80 Only)
+      - name: Fetch and Filter (All Protocols - Port 443/80)
         run: |
-          # 1. التوقيت والترويسة بالاسم الجديد
+          # 1. الترويسة والوقت
           TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
           echo "###############################################" > king_of_hearts.txt
-          echo "# BRAND: king of hearts - MILAD SOURCE" >> king_of_hearts.txt
-          echo "# STATUS: PORT 443 & 80 ONLY" >> king_of_hearts.txt
+          echo "# BRAND: king of hearts - FULL SOURCE" >> king_of_hearts.txt
+          echo "# PORT: 443 & 80 ONLY" >> king_of_hearts.txt
           echo "# UPDATE: $TIMESTAMP" >> king_of_hearts.txt
           echo "###############################################" >> king_of_hearts.txt
           
-          # 2. سحب البيانات من الرابط المحدد
+          # 2. سحب البيانات من الرابط
           curl -sL "https://raw.githubusercontent.com/miladtahanian/Config-Collector/main/mixed_iran.txt" > raw.txt
           
-          # 3. الفلترة الصارمة:
-          # - إبقاء بورت 443 و 80 فقط
-          # - استخراج vmess, vless, trojan فقط
-          # - حذف أي سيرفر Shadowsocks (ss://)
+          # 3. الفلترة (إبقاء الكل: vmess, vless, trojan)
+          # هنا أعدنا تفعيل البحث عن vmess و vless
           grep -iE ":443|:80" raw.txt | grep -Ei "vmess|vless|trojan" | grep -iv "ss://" | sort -u > clean.txt
           
           # 4. إضافة البصمة الملكية: king of hearts
@@ -40,10 +38,10 @@ jobs:
             fi
           done < clean.txt
 
-      - name: Push to GitHub
+      - name: Commit and Push
         run: |
-          git config --global user.name "Ghazwan-Pro-Lab" # هويتك كمهندس
+          git config --global user.name "Ghazwan-Pro-Lab"
           git config --global user.email "lab@ghazwan.pro"
           git add king_of_hearts.txt
-          git commit -m "Update: king of hearts server list $TIMESTAMP" || exit 0
+          git commit -m "Full Update (Vless/Vmess/Trojan) - king of hearts" || exit 0
           git push
