--- a/.github/workflows/king_of_hearts.yml
+++ b/.github/workflows/king_of_hearts.yml
@@ -1,8 +1,8 @@
-name: King_of_Hearts_Full_Protocols
+name: King_of_Hearts_Original_Names
 
 on:
   schedule:
-    - cron: '0 */4 * * *' # تحديث تلقائي كل 4 ساعات
+    - cron: '0 */4 * * *' # تحديث كل 4 ساعات
   workflow_dispatch: 
 
 jobs:
@@ -12,38 +12,59 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Fetch and Filter (Vmess, Vless, Trojan - Port 443/80)
+      - name: Smart Filter (Original Remarks - Port 443/80)
+        shell: python
         run: |
-          # 1. الترويسة والوقت
-          TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
-          echo "###############################################" > king_of_hearts.txt
-          echo "# BRAND: king of hearts - ALL PROTOCOLS" >> king_of_hearts.txt
-          echo "# STATUS: PORT 443 & 80 ONLY" >> king_of_hearts.txt
-          echo "# UPDATE: $TIMESTAMP" >> king_of_hearts.txt
-          echo "###############################################" >> king_of_hearts.txt
-          
-          # 2. سحب البيانات من مصدر Milad
-          curl -sL "https://raw.githubusercontent.com/miladtahanian/Config-Collector/main/mixed_iran.txt" > raw.txt
-          
-          # 3. الفلترة الشاملة:
-          # - إبقاء بورت 443 و 80 فقط
-          # - استخراج vmess و vless و trojan معاً
-          # - استبعاد Shadowsocks (ss://)
-          grep -iE ":443|:80" raw.txt | grep -Ei "vmess|vless|trojan" | grep -iv "ss://" | sort -u > clean.txt
-          
-          # 4. إضافة البصمة الملكية: king of hearts
-          while read -r line; do
-            if [[ $line == *"#"* ]]; then
-              echo "${line%#*}#king of hearts" >> king_of_hearts.txt
-            else
-              echo "$line#king of hearts" >> king_of_hearts.txt
-            fi
-          done < clean.txt
+          import requests
+          import base64
+          import json
+          from datetime import datetime, timedelta
 
-      - name: Commit and Push to GitHub
+          url = "https://raw.githubusercontent.com/miladtahanian/Config-Collector/main/mixed_iran.txt"
+          
+          def process():
+              try:
+                  response = requests.get(url)
+                  lines = response.text.splitlines()
+                  final_configs = []
+
+                  for line in lines:
+                      # 1. معالجة Trojan و Vless: الحفاظ على السطر الأصلي بالكامل
+                      if "trojan://" in line or "vless://" in line:
+                          if ":443" in line or ":80" in line:
+                              final_configs.append(line)
+
+                      # 2. معالجة Vmess: فك التشفير لفحص البورت فقط
+                      elif "vmess://" in line:
+                          try:
+                              b64_data = line.replace("vmess://", "")
+                              decoded = base64.b64decode(b64_data + '=' * (-len(b64_data) % 4)).decode('utf-8')
+                              config_json = json.loads(decoded)
+                              
+                              # إذا كان البورت 443 أو 80، نحتفظ بالرابط الأصلي
+                              if str(config_json.get('port')) in ['443', '80']:
+                                  final_configs.append(line)
+                          except:
+                              continue
+
+                  # 3. كتابة الملف النهائي بدون حقن أي اسم إضافي
+                  timestamp = (datetime.utcnow() + timedelta(hours=3)).strftime('%Y-%m-%d %I:%M %p')
+                  with open("king_of_hearts.txt", "w") as f:
+                      f.write("###############################################\n")
+                      f.write("# SOURCE: MILAD SOURCE (ORIGINAL NAMES)\n")
+                      f.write("# STATUS: VMESS/VLESS/TROJAN | PORT 443/80\n")
+                      f.write(f"# UPDATE: {timestamp}\n")
+                      f.write("###############################################\n\n")
+                      f.write("\n".join(list(set(final_configs))))
+              except Exception as e:
+                  print(f"Error: {e}")
+
+          process()
+
+      - name: Push to GitHub
         run: |
-          git config --global user.name "Ghazwan-Pro-Lab"
+          git config --global user.name "Ghazwan-Pro-Lab" # هويتك كمهندس
           git config --global user.email "lab@ghazwan.pro"
           git add king_of_hearts.txt
-          git commit -m "Update king of hearts: Full Protocols $TIMESTAMP" || exit 0
+          git commit -m "Update: Original server names $TIMESTAMP" || exit 0
           git push
