--- a/.github/workflows/mram.yml
+++ b/.github/workflows/mram.yml
@@ -18,65 +18,84 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install requests # تأمين المكتبات لمنع فشل التشغيل
+        run: pip install requests # لمنع الـ Run Failed
 
-      - name: Iraq Smart Filter & Host Injection
+      - name: Smart Filter & Host Injection
         shell: python
         run: |
-          import requests
-          import base64
-          import json
-          import re
+          import requests, base64, json, re, os
           from datetime import datetime, timedelta
 
-          # المصادر الخاصة بك (بدون المصادر المتكررة)
+          # المصادر القوية الخاصة بك
           urls = [
               "https://raw.githubusercontent.com/yebekhe/TVip/main/Sub/v2ray.txt",
               "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt",
               "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt"
           ]
 
-          hosts = [
-              "viberout-lp.viber.com:443",
-              "lp.viber.com:443",
-              "braze-images.com:443",
-              "cdn.braze.com:443"
-          ]
+          hosts = ["viberout-lp.viber.com", "lp.viber.com", "braze-images.com", "cdn.braze.com"]
+          final_configs = []
 
           def process():
-              all_raw_configs = []
               for url in urls:
                   try:
                       res = requests.get(url, timeout=20)
-                      all_raw_configs.extend(res.text.splitlines())
+                      # التعامل مع الروابط التي قد تكون مشفرة بالكامل (Base64 Sub)
+                      content = res.text
+                      try:
+                          content = base64.b64decode(content).decode('utf-8')
+                      except: pass
+                      
+                      lines = content.splitlines()
+                      for line in lines:
+                          # 1. تصفية Trojan و Vless
+                          if "trojan://" in line or "vless://" in line:
+                              if ":443" in line or ":80" in line:
+                                  final_configs.append(line)
+                          
+                          # 2. فك تشفير Vmess لفحص البورت (هنا كان الخلل)
+                          elif "vmess://" in line:
+                              try:
+                                  b64_data = line.replace("vmess://", "")
+                                  decoded = base64.b64decode(b64_data + '=' * (-len(b64_data) % 4)).decode('utf-8')
+                                  config_json = json.loads(decoded)
+                                  if str(config_json.get('port')) in ['443', '80']:
+                                      final_configs.append(line)
+                              except: continue
                   except: continue
 
-              clean_configs = []
-              for config in all_raw_configs:
-                  # الفلترة لا تزال تعمل على 443 و 80 برمجياً لضمان الجودة في العراق
-                  if (":443" in config or ":80" in config) and "tls" in config.lower():
-                      if "chillguy" not in config.lower() and ("vmess" in config or "vless" in config or "trojan" in config):
-                          clean_configs.append(config)
-
-              clean_configs = list(set(clean_configs))
-
-              final_list = []
-              chunk_size = len(clean_configs) // 4 if len(clean_configs) > 4 else 1
+              unique_configs = list(set(final_configs))
               
-              for i, config in enumerate(clean_configs):
-                  host_index = min(i // chunk_size, 3)
-                  modified = re.sub(r'@[^:]+:', f'@{hosts[host_index]}:', config)
-                  final_list.append(modified)
+              # 3. حقن الهوستات العراقية
+              injected_list = []
+              chunk_size = max(1, len(unique_configs) // 4)
+              for i, config in enumerate(unique_configs):
+                  h_idx = min(i // chunk_size, 3)
+                  # استبدال الهوست الأصلي بهوستات التخطي (Viber/Braze)
+                  if "vmess://" in config:
+                      try:
+                          b64 = config.replace("vmess://", "")
+                          d = json.loads(base64.b64decode(b64 + '=' * (-len(b64) % 4)).decode('utf-8'))
+                          d['add'] = hosts[h_idx]
+                          d['port'] = 443
+                          d['ps'] = f"Titanium_{i}" # اسم مميز لكل سيرفر
+                          new_b64 = base64.b64encode(json.dumps(d).encode('utf-8')).decode('utf-8')
+                          injected_list.append(f"vmess://{new_b64}")
+                      except: injected_list.append(config)
+                  else:
+                      # لـ Vless و Trojan
+                      mod = re.sub(r'@[^:]+:', f'@{hosts[h_idx]}:443', config)
+                      injected_list.append(mod)
 
-              # الترويسة بالاسم الرسمي الجديد
+              # كتابة الملف النهائي
               timestamp = (datetime.utcnow() + timedelta(hours=3)).strftime('%Y-%m-%d %I:%M %p')
               with open("mysubs_new.txt", "w") as f:
-                  f.write("###############################################\n")
-                  f.write("# BRAND: Ghazwan_Pro_Titanium - IRAQ ELITE\n")
-                  f.write("# STATUS: OPTIMIZED FOR IRAQ INFRASTRUCTURE\n")
+                  f.write(f"###############################################\n")
+                  f.write(f"# BRAND: Ghazwan_Pro_Titanium - IRAQ ELITE\n")
+                  f.write(f"# STATUS: SMART DECODED & INJECTED\n")
                   f.write(f"# UPDATE: {timestamp}\n")
-                  f.write("###############################################\n\n")
-                  f.write("\n".join(final_list))
+                  f.write(f"###############################################\n\n")
+                  f.write("\n".join(injected_list))
 
           process()
 
@@ -85,5 +104,5 @@ jobs:
           git config --global user.name "Ghazwan-Pro-Lab"
           git config --global user.email "lab@ghazwan.pro"
           git add mysubs_new.txt
-          git commit -m "Titanium Update: Cleaner Workflow Name $TIMESTAMP" || exit 0
+          git commit -m "Fix Empty File: Smart Decoding Enabled $TIMESTAMP" || exit 0
           git push
