--- a/.github/workflows/mram.yml
+++ b/.github/workflows/mram.yml
@@ -2,7 +2,7 @@ name: Iraq_Elite_Titanium_Optimized
 
 on:
   schedule:
-    - cron: '0 */4 * * *' # تحديث تلقائي كل 4 ساعات
+    - cron: '0 */4 * * *' # تحديث كل 4 ساعات
   workflow_dispatch: 
 
 jobs:
@@ -12,70 +12,37 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: pip install requests # حل مشكلة الفشل في 4 ثوانٍ
-
-      - name: Smart Collector (Large Source Handling)
-        shell: python
+      - name: Fetch and Filter (Basic Logic)
         run: |
-          import requests, base64, json, re
-          from datetime import datetime, timedelta
-
-          # الرابط الضخم الذي وجدته مع مصادرك الأخرى
-          urls = [
-              "https://raw.githubusercontent.com/yebekhe/TVip/main/Sub/v2ray.txt",
-              "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt",
-              "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt"
-          ]
-
-          hosts = ["viberout-lp.viber.com", "lp.viber.com", "braze-images.com", "cdn.braze.com"]
-          final_configs = []
-
-          def decode_data(data):
-              try:
-                  return base64.b64decode(data + '=' * (-len(data) % 4)).decode('utf-8')
-              except: return data
-
-          for url in urls:
-              try:
-                  res = requests.get(url, timeout=30)
-                  # فك تشفير الرابط الضخم ليتحول لأسطر واضحة
-                  content = decode_data(res.text)
-                  for line in content.splitlines():
-                      if not line.strip(): continue
-                      # فلترة البورتات المطلوبة للعراق
-                      if (":443" in line or ":80" in line) and ("vless" in line or "trojan" in line or "vmess" in line):
-                          final_configs.append(line)
-              except: continue
-
-          unique_configs = list(set(final_configs))
+          # 1. تجهيز الملف والترويسة
+          TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
+          echo "###############################################" > mysubs_new.txt
+          echo "# BRAND: Ghazwan_Pro_Titanium - BASIC FLOW" >> mysubs_new.txt
+          echo "# STATUS: HIGH RELIABILITY" >> mysubs_new.txt
+          echo "# UPDATE: $TIMESTAMP" >> mysubs_new.txt
+          echo "###############################################" >> mysubs_new.txt
           
-          # حقن الهوستات والاسم الرسمي
-          injected = []
-          for i, config in enumerate(unique_configs):
-              h_idx = i % len(hosts)
-              # تخصيص الاسم ليظهر Titanium_X
-              if "#" in config: config = config.split("#")[0]
-              injected.append(f"{config}#Titanium_{i}")
+          # 2. سحب البيانات من المصادر الأساسية
+          curl -sL "https://raw.githubusercontent.com/yebekhe/TVip/main/Sub/v2ray.txt" >> raw.txt
+          curl -sL "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt" >> raw.txt
+          curl -sL "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt" >> raw.txt
+          
+          # 3. الفلترة المباشرة لبورت 443 و 80 (الأكثر استقراراً)
+          # نقوم بفلترة السطور التي تحتوي على البورتات المطلوبة حصراً
+          grep -iE ":443|:80" raw.txt | grep -Ei "vmess|vless|trojan" | sort -u > clean.txt
+          
+          # 4. إضافة البصمة Titanium لكل سيرفر
+          while read -r line; do
+            if [[ $line == *"#"* ]]; then
+              echo "${line%#*}#Titanium" >> mysubs_new.txt
+            else
+              echo "$line#Titanium" >> mysubs_new.txt
+            fi
+          done < clean.txt
 
-          # حفظ الملف النهائي
-          timestamp = (datetime.utcnow() + timedelta(hours=3)).strftime('%Y-%m-%d %I:%M %p')
-          with open("mysubs_new.txt", "w") as f:
-              f.write(f"###############################################\n")
-              f.write(f"# BRAND: Ghazwan_Pro_Titanium - FULL FLOW\n")
-              f.write(f"# UPDATE: {timestamp}\n")
-              f.write(f"###############################################\n\n")
-              f.write("\n".join(injected))
-
-      - name: Push to GitHub
+      - name: Commit and Push
         run: |
           git config --global user.name "Ghazwan-Pro-Lab"
           git config --global user.email "lab@ghazwan.pro"
           git add mysubs_new.txt
-          git commit -m "Titanium Full Refresh: Source Expanded $TIMESTAMP" || exit 0
-          git push
+          git commit -m "Reverted to Basic Stable
